ikiwiki (2.18) UNRELEASED; urgency=low

  * Split error messages for failures to drop real uid and gid.
  * Retry dropping uid and gid, possibly this will help with the "Resource
    temporarily unavailable" failures I've experienced under xen.

 -- Joey Hess <joeyh@debian.org>  Tue, 01 Jan 2008 18:46:59 -0500

ikiwiki (2.17) unstable; urgency=low

  * Improved parentlinks special case for index pages.
  * redir: Support for specifying anchors.
  * img: Avoid nesting images when linking to another image. Closes: #457780
  * img: Allow the link parameter to point to an exterior url.
  * conditional: Improve regexp testing for simple uses of pagespecs
    that match only the page using the directive, adding 'included()'
    and supporting negated pagespecs and added whitespace.
  * map: Fix handling of common prefix to handle the case where it's
    in a subdirectory. Patch by Larry Clapp.
  * aggregate: Fix stupid mistake introduced when converting it to use
    the needsbuild hook. This resulted in feeds not being removed when pages
    were updated, and feeds sometimes being forgotten about.
  * aggregate: Avoid uninitialised value warning when removing a feed that
    has an expired guid.

 -- Joey Hess <joeyh@debian.org>  Sun, 30 Dec 2007 14:57:44 -0500

ikiwiki (2.16) unstable; urgency=low

  * Major basewiki reorganisation. Most pages moved into ikiwiki/ subdirectory
    to avoid polluting the main namespace, and some were further renamed.
  * meta: Add redir support, based on a patch by Thomas Schwinge.
  * Redirs added for moved basewiki pages. These will be removed in a future
    release.
  * Remove .otl file from sandbox to avoid build ugliness. Closes: #454181
  * Finally implemented a simple per-page data storage mechanism for plugins,
    via the %pagestate hash.
  * Use pagestate in meta to detect potential redir loops.
  * Added a version plugin that saves state about what's using it, to force
    pages to rebuild when ikiwiki's version changes.